--- a/convnet.ipynb
+++ b/convnet.ipynb
@@ -1,1 +1,458 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "* Today, we are going to show how to train a ConvNet using PyTorch.\n",
+    "\n",
+    "* We will also illustrate how the ConvNet uses specific assumptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To achieve good results, we must first integrate certain knowledge regarding the problem.\n",
+    "* Hypotheses help us when they are true.\n",
+    "* They hurt us when they are not\n",
+    "* We want to make just the right amount of assumptions, no more than that.\n",
+    "# In deep learning\n",
+    "* Multiple layers:  compositionality\n",
+    "* Convolutions: locality + stationarity of images\n",
+    "* Pooling: Invariance of the object class to translations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot_lib import plot_data, plot_model, set_default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_default()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torchvision import datasets, transforms\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy\n",
+    "\n",
+    "# function to count the number of parameters\n",
+    "def get_n_params(model):\n",
+    "    np=0\n",
+    "    for p in list(model.parameters()):\n",
+    "        np += p.nelement()\n",
+    "    return np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import the dataset (MNIST)\n",
+    "We can use some utilities from PyTorch DataLoader for this.  This will allow us to download, shuffle, normalize the data, and batch them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size  = 28*28   # images in 28x28 pixels\n",
+    "output_size = 10      # 10 classes (les 10 digits)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    datasets.MNIST('../data', train=True, download=True,\n",
+    "                   transform=transforms.Compose([\n",
+    "                       transforms.ToTensor(),\n",
+    "                       transforms.Normalize((0.1307,), (0.3081,))\n",
+    "                   ])),\n",
+    "    batch_size=64, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "    datasets.MNIST('../data', train=False, transform=transforms.Compose([\n",
+    "                       transforms.ToTensor(),\n",
+    "                       transforms.Normalize((0.1307,), (0.3081,))\n",
+    "                   ])),\n",
+    "    batch_size=1000, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display of a few images\n",
+    "plt.figure(figsize=(16, 6))\n",
+    "for i in range(10):\n",
+    "    plt.subplot(2, 5, i + 1)\n",
+    "    image, _ = train_loader.dataset.__getitem__(i)\n",
+    "    plt.imshow(image.squeeze().numpy())\n",
+    "    plt.axis('off');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creation of Python classes for the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FC2Layer(nn.Module):\n",
+    "    def __init__(self, input_size, n_hidden, output_size):\n",
+    "        super(FC2Layer, self).__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.network = nn.Sequential(\n",
+    "            nn.Linear(input_size, n_hidden), \n",
+    "            nn.ReLU(), \n",
+    "            nn.Linear(n_hidden, n_hidden), \n",
+    "            nn.ReLU(), \n",
+    "            nn.Linear(n_hidden, output_size), \n",
+    "            nn.LogSoftmax(dim=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, self.input_size)\n",
+    "        return self.network(x)\n",
+    "    \n",
+    "class CNN(nn.Module):\n",
+    "    def __init__(self, input_size, n_feature, output_size):\n",
+    "        super(CNN, self).__init__()\n",
+    "        self.n_feature = n_feature\n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=n_feature, kernel_size=5)\n",
+    "        self.conv2 = nn.Conv2d(n_feature, n_feature, kernel_size=5)\n",
+    "        self.fc1 = nn.Linear(n_feature*4*4, 50)\n",
+    "        self.fc2 = nn.Linear(50, 10)\n",
+    "        \n",
+    "    def forward(self, x, verbose=False):\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.max_pool2d(x, kernel_size=2)\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.max_pool2d(x, kernel_size=2)\n",
+    "        x = x.view(-1, self.n_feature*4*4)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.log_softmax(x, dim=1)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operation on a GPU\n",
+    "\n",
+    "In PyTorch, the transition between the CPU and the GPU is controlled by a device chain, which will determine if the GPU is available, and will revert to the CPU if it is not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_list = []\n",
+    "\n",
+    "def train(epoch, model, perm=torch.arange(0, 784).long()):\n",
+    "    model.train()\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        # send to the device\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        \n",
+    "        # permutation of pixels\n",
+    "        data = data.view(-1, 28*28)\n",
+    "        data = data[:, perm]\n",
+    "        data = data.view(-1, 1, 28, 28)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = F.nll_loss(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if batch_idx % 100 == 0:\n",
+    "            print('Training epochs : {} [{}/{} ({:.0f}%)]\\tLoss : {:.6f}'.format(\n",
+    "                epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "                100. * batch_idx / len(train_loader), loss.item()))\n",
+    "            \n",
+    "def test(model, perm=torch.arange(0, 784).long()):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    for data, target in test_loader:\n",
+    "        # send to the device\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        \n",
+    "        # permutation of pixels\n",
+    "        data = data.view(-1, 28*28)\n",
+    "        data = data[:, perm]\n",
+    "        data = data.view(-1, 1, 28, 28)\n",
+    "        output = model(data)\n",
+    "        test_loss += F.nll_loss(output, target, reduction='sum').item() # sum up batch loss                                                               \n",
+    "        pred = output.data.max(1, keepdim=True)[1] # get the index of the max log-probability                                                                 \n",
+    "        correct += pred.eq(target.data.view_as(pred)).cpu().sum().item()\n",
+    "\n",
+    "    test_loss /= len(test_loader.dataset)\n",
+    "    accuracy = 100. * correct / len(test_loader.dataset)\n",
+    "    accuracy_list.append(accuracy)\n",
+    "    print('\\nTest : Average loss : {:.4f}, Precision: {}/{} ({:.0f}%)\\n'.format(\n",
+    "        test_loss, correct, len(test_loader.dataset),\n",
+    "        accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a small fully-connected network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hidden = 8 # number of hidden units\n",
+    "\n",
+    "model_fnn = FC2Layer(input_size, n_hidden, output_size)\n",
+    "model_fnn.to(device)\n",
+    "optimizer = optim.SGD(model_fnn.parameters(), lr=0.01, momentum=0.5)\n",
+    "print('Number of parameters : {}'.format(get_n_params(model_fnn)))\n",
+    "\n",
+    "for epoch in range(0, 1):\n",
+    "    train(epoch, model_fnn)\n",
+    "    test(model_fnn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a ConvNet with the same number of parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training Parameters\n",
+    "n_features = 6 # number of feature maps\n",
+    "\n",
+    "model_cnn = CNN(input_size, n_features, output_size)\n",
+    "model_cnn.to(device)\n",
+    "optimizer = optim.SGD(model_cnn.parameters(), lr=0.01, momentum=0.5)\n",
+    "print('Number of parameters : {}'.format(get_n_params(model_cnn)))\n",
+    "\n",
+    "for epoch in range(0, 1):\n",
+    "    train(epoch, model_cnn)\n",
+    "    test(model_cnn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The ConvNet performs better with the same number of parameters as the fully connected network, thanks to the use of prior knowledge about images.\n",
+    "\n",
+    "* Use of convolution: locality and stationarity in images\n",
+    "* Pooling: integrating a certain invariance in translation\n",
+    "\n",
+    "# What happens if the assumptions are no longer true?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perm = torch.randperm(784)\n",
+    "plt.figure(figsize=(16, 12))\n",
+    "for i in range(10):\n",
+    "    image, _ = train_loader.dataset.__getitem__(i)\n",
+    "    #  permutation of pixels\n",
+    "    image_perm = image.view(-1, 28*28).clone()\n",
+    "    image_perm = image_perm[:, perm]\n",
+    "    image_perm = image_perm.view(-1, 1, 28, 28)\n",
+    "    plt.subplot(4, 5, i + 1)\n",
+    "    plt.imshow(image.squeeze().numpy())\n",
+    "    plt.axis('off')\n",
+    "    plt.subplot(4, 5, i + 11)\n",
+    "    plt.imshow(image_perm.squeeze().numpy())\n",
+    "    plt.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ConvNet with permuted pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training parameters \n",
+    "n_features = 6 # number of feature maps\n",
+    "\n",
+    "model_cnn = CNN(input_size, n_features, output_size)\n",
+    "model_cnn.to(device)\n",
+    "optimizer = optim.SGD(model_cnn.parameters(), lr=0.01, momentum=0.5)\n",
+    "print('Number of parameters : {}'.format(get_n_params(model_cnn)))\n",
+    "\n",
+    "for epoch in range(0, 1):\n",
+    "    train(epoch, model_cnn, perm)\n",
+    "    test(model_cnn, perm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fully-Connected with permuted pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hidden = 8 # number of hidden units\n",
+    "\n",
+    "model_fnn = FC2Layer(input_size, n_hidden, output_size)\n",
+    "model_fnn.to(device)\n",
+    "optimizer = optim.SGD(model_fnn.parameters(), lr=0.01, momentum=0.5)\n",
+    "print('Number of parameters  : {}'.format(get_n_params(model_fnn)))\n",
+    "\n",
+    "for epoch in range(0, 1):\n",
+    "    train(epoch, model_fnn, perm)\n",
+    "    test(model_fnn, perm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The performance of the ConvNet decreases when we permute the pixels, but that of the Fully-Connected Network remains the same.\n",
+    "\n",
+    "* ConvNet operates on the principle that pixels are located on a grid and are stationary/local.\n",
+    "\n",
+    "* His performance declines when this hypothesis is false.\n",
+    "\n",
+    "* The fully connected network does not make this assumption.\n",
+    "\n",
+    "* He is worse off when it's true, because he doesn't take advantage of that prior knowledge.\n",
+    "\n",
+    "* However, he does not suffer when the hypothesis is false.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.bar(('NN', 'ConvNet',\n",
+    "         'ConvNet permu.', 'NN permu.'),\n",
+    "        accuracy_list, width=0.4)\n",
+    "plt.ylim((min(accuracy_list)-5, 96))\n",
+    "plt.ylabel('Precision [%]')\n",
+    "for tick in plt.gca().xaxis.get_major_ticks():\n",
+    "    tick.label.set_fontsize(20)\n",
+    "plt.title('Comparing performances');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verification of model parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dir(model_cnn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dir(model_fnn))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
